<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_bleuclair"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textColor="@color/background_blanc"
        android:textSize="20sp" />
    
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="20dp"
        android:fadingEdge="horizontal"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/password"
        android:textColor="@color/background_blanc"
        android:textSize="20sp" />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fadingEdge="horizontal"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="20sp" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom|left"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <Button
            android:id="@+id/okbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/background_blanc"
            android:text="@string/login"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_blanc"
            android:text="@string/cancel"
            android:textSize="20sp" >
 
    	</Button>
    </LinearLayout>
</LinearLayout>

